# nav_aut

./: .gitmodules  README.md  package-lock.json  package.json
bag_files/: config.txt
bag_files/gps/: gps_0.db3  metadata.yaml
bag_files/gps_2/: gps_2_0.db3  metadata.yaml
bag_files/imu_data_2/: metadata.yaml
bag_files/imu_data_3/: metadata.yaml
bag_files/odom_gps_fallando_rtk/: metadata.yaml
bag_files/odom_gps_fallando_rtk_2/: metadata.yaml
bag_files/odometry_data_1/: metadata.yaml
bag_files/odometry_data_2/: metadata.yaml
bag_files/rosbag2_2024_05_02-10_20_50/: metadata.yaml
bag_files/rosbag2_2024_05_02-10_33_36/: metadata.yaml
bag_files/rosbag2_2024_05_02-10_33_38/: metadata.yaml
bag_files/rosbag2_2024_05_02-10_41_10/: metadata.yaml
bag_files/rosbag2_2024_05_02-10_41_12/: metadata.yaml
bag_files/rosbag2_2024_05_02-11_42_48/: metadata.yaml
config/: datum_config.yaml  dual_ekf_navsat_params.yaml  nav2_no_map.yaml
hunter_description_pkg/: CMakeLists.txt  package.xml
hunter_description_pkg/config/: my_controllers.yaml
hunter_description_pkg/launch/: rsp.launch.py  simulation.launch.py
hunter_description_pkg/meshes/: fr_right_link.dae  fr_steer_right_link.dae  re_right_link.dae
hunter_description_pkg/rviz/: default_rviz1.rviz
hunter_description_pkg/urdf/: controller.xacro  hunter.urdf.xacro  hunter_core.xacro  imu.xacro  material_macros.xacro
hunter_sim_pkg/: CMakeLists.txt  package.xml
hunter_sim_pkg/config/: datum_config.yaml  dual_ekf_navsat_params.yaml  follow_dynamic_waypoint.xml  mqtt_config.yaml  my_controllers.yaml  my_controllers_complex.yaml  nav2_commander_config.yaml  nav2_no_map.yaml  navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml  nodes_params.yaml  string2ros_config.yaml
hunter_sim_pkg/description/: hunter2.urdf  hunter2.xacro  hunter2_urdf.csv  hunter2_urdf.xml
hunter_sim_pkg/description/hunter_urdf/: hunter.urdf.xacro  hunter_core.xacro
hunter_sim_pkg/description/simple_urdf/: gps.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
hunter_sim_pkg/include/hunter_sim_pkg/: String2ros.hpp  area_path_gen.hpp  datum_gen.hpp  nav2_commander.hpp
hunter_sim_pkg/launch/: datumgen.launch.py  dual_ekf_navsat.launch.py  nav2_nomap.launch.py  pruebas.launch.py  simulators_launch.launch.py
hunter_sim_pkg/mesh/: fr_left_link.dae  fr_steer_left_link.dae  re_left_link.dae
hunter_sim_pkg/models/model1/: model.config  model.sdf
hunter_sim_pkg/models/turtlebot_waffle_gps/: model.sdf
hunter_sim_pkg/rviz/: default_rviz1.rviz
hunter_sim_pkg/scenes/: gazebo_world.world
hunter_sim_pkg/src/: String2ros.cpp  datum_gen.cpp  nav2_commander.cpp  run_coppelia_simulator.cpp
include/hunter_sim_pkg/: area_path_gen.hpp  datum_gen.hpp
launch/: coppelia_Sim.xml  datumgen.launch.py  dual_ekf_navsat.launch.py  nav2_nomap.launch.py  pruebas.launch.py  simulators_launch.launch.py
memoria/: datos.tex  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.run.xml  main.tex  main.toc  references.bib
memoria/images/Documents/: frames_2024-05-08_12.45.40.gv  pointcloud.txt
memoria/pages/: 02-portada.tex  03-agradecimientos.tex  04-resumen.tex  05-cuerpo.tex  06-anexos.tex
mqqt_to_nav2_commander/: package.xml  setup.cfg  setup.py
mqqt_to_nav2_commander/mqqt_to_nav2_commander/: send_poses.py
msg_srv_hunter/: CMakeLists.txt  package.xml
msg_srv_hunter/msg/: Polygon.msg  Rectangle.msg
notebooks/: 03.ipynb
sim_robot/: CMakeLists.txt  package.xml
sim_robot/BT_xml/: bt_test.xml
sim_robot/config/: dual_ekf_navsat_params.yaml  joystick.yaml  my_controllers.yaml  nav2_no_map.yaml  rviz_test_robot.rviz
sim_robot/description/: gazebo_control.xacro  gps.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
sim_robot/launch/: dual_ekf_navsat.launch.py  gazebo_world.launch.py  joystick.launch.py  navigation_2.launch.py  rsp.launch.py  sim.launch.py
sim_robot/worlds/: gazebo_world.world
simple_urdf/: gps.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
src/: App.css  App.js  datum_gen.cpp  index.js
src/components/: CoordinateDisplay.js  mapa.js
src/components/mqttConector/: index.js  subscriber.js
xsens_ros2/: package.xml  setup.cfg  setup.py
xsens_ros2/launch/: xsens_ros2.launch.py
xsens_ros2/params/: xsens_params.yaml
xsens_ros2/xsens_ros2/: mtdef.py  ros2_driver.py
